force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <label>Shipment</label>
    <nameField>
        <label>Shipment ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>