force-app/main/default/objects/Shipment__c/fields/Allow_to_try_before_receiving__c.field-meta.xml
<CustomField>
    <fullName>Allow_to_try_before_receiving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow to try before receiving</label>
    <type>Checkbox</type>
</CustomField>