force-app/main/default/objects/Shipment__c/fields/Allow_to_unpack_before_receiving__c.field-meta.xml
<CustomField>
    <fullName>Allow_to_unpack_before_receiving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow to unpack before receiving</label>
    <type>Checkbox</type>
</CustomField>