force-app/main/default/objects/Shipment__c/fields/COD_amount__c.field-meta.xml
<CustomField>
    <fullName>COD_amount__c</fullName>
    <label>COD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>