force-app/main/default/objects/Shipment__c/fields/Email_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Email_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email to customer</label>
    <type>Checkbox</type>
</CustomField>