force-app/main/default/objects/Shipment__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipment</relationshipLabel>
    <relationshipName>Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>