force-app/main/default/objects/Shipment__c/fields/Package_height__c.field-meta.xml
<CustomField>
    <fullName>Package_height__c</fullName>
    <inlineHelpText>Unit: cm</inlineHelpText>
    <label>Package height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>