force-app/main/default/objects/Shipment__c/fields/Package_length__c.field-meta.xml
<CustomField>
    <fullName>Package_length__c</fullName>
    <inlineHelpText>Unit: cm</inlineHelpText>
    <label>Package length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>