force-app/main/default/objects/Shipment__c/fields/Package_width__c.field-meta.xml
<CustomField>
    <fullName>Package_width__c</fullName>
    <inlineHelpText>Unit: cm</inlineHelpText>
    <label>Package width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>