force-app/main/default/objects/Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picking up</fullName>
            </value>
            <value>
                <fullName>On the way</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Customer absent</fullName>
            </value>
            <value>
                <fullName>Waiting for return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>