force-app/main/default/objects/Shipment__c/fields/Totalweight__c.field-meta.xml
<CustomField>
    <fullName>Totalweight__c</fullName>
    <label>Total weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>